dded the translation buttons to the last two songs ^^

--- a/fashion.html
+++ b/fashion.html
@@ -98,7 +98,7 @@
         </p>
     </div>
 
-    <div id="korean">
+    <div id="korean" style="display: none;">
         <h2>
             Fashion
         </h2>
@@ -182,7 +182,7 @@
         </p>
     </div>
 
-    <div id="romanized">
+    <div id="romanized" style="display: none;">
         <h2>
             Fashion
         </h2>
@@ -202,7 +202,7 @@
             Angeonho naega san ot bogo mworago malhaedo jikyeo nae gojip (Yeah)<br>
             Hureucheu jjimhaenoeun sangpume isseotdeon belteuneun now on my heori, huh<br>
             Sorry, my granny, huh, yojeum wae an oni? seopasin dongmyo halmeoni<br>
-            Yeogin bihaenggi, huh, LAesеo aelbeomeul kkеunnaego meositge dorawa, back on my swag<br>
+            Yeogin bihaenggi, huh, LAeseo aelbeomeul kkeunnaego meositge dorawa, back on my swag<br>
         </p>
         <p>
             Huh, huh, oehwa talk, huh, hwanyul olla maeil<br>
@@ -266,7 +266,7 @@
         </p>
     </div>
 
-    <div id="english">
+    <div id="english" style="display: none">
         <h2>
             Fashion
         </h2>
@@ -296,8 +296,8 @@
         </p>
         <p>
             Dongmyo's where we gather, like a seminar<br>
-            Hongdae's where we gathеr, we set it off<br>
-            To the hеart of Cheongdam-dong, spreading out<br>
+            Hongdae's where we gather, we set it off<br>
+            To the heart of Cheongdam-dong, spreading out<br>
             Squad is on the way, but we can't wrap it up<br>
         </p>
         <p>
