I made a music player

--- a/go.html
+++ b/go.html
@@ -8,92 +8,105 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <button onclick="translateToKorean()">korean</button>
-        <button onclick="translateToRomanized()">romanized</button>
-        <button onclick="translateToEnglish()">english</button>
-    </div>
+    <table>
+        <tr>
+            <td>
+                <div>
+                    <button onclick="translateToKorean()">korean</button>
+                    <button onclick="translateToRomanized()">romanized</button>
+                    <button onclick="translateToEnglish()">english</button>
+                </div>
 
-    <div id="lyrics">
-        <h2>
-            GO!
-        </h2>
-        <p>
-            우린 필요 없어 다른 sign<br>
-            Paint the town, 초록색의 lights<br>
-            페달에 발을 올려, 마치 bike<br>
-        </p>
-        <p>
-            I just gotta get it<br>
-            Watch me go, go, go, go, go, go<br>
-            I just gotta get it<br>
-            Watch me go, go, go, go, go, go<br>
-            I just gotta get it<br>
-        </p>
-        <p>
-            가져와 new beat,<br>
-            가져와 new hit<br>
-            가져와 new sheet,<br>
-            만들어 new shit<br>
-            가져와 new beat,<br>
-            가져와 new hit<br>
-            가져와 new sheet,<br>
-            I'm on the new shit<br>
-        </p>
-        <p>
-            (Ya, sh) 바지 내려 입고 우린 studio로 가지 (huh, huh)<br>
-            Drippy, 고장 난 듯 배수관이, yeah, yeah<br>
-            불러와 new wave, Poseidon 같이 (uh, uh)<br>
-            Martin (that's on fire), play that beat (that's on fire)<br>
-            Yeah, 작업실에서 불을 피워, 밤도 대낮같이 (yeah)<br>
-            우린 오늘 만들었지, and this track is so sick<br>
-            레벨 좀 더 키워, 이 노래는 달려 도시를 (도시, yeah)<br>
-        </p>
-        <p>
-            우린 필요 없어 다른 sign (okay, okay)<br>
-            Paint the town, 초록색의 lights (yeah, lights)<br>
-            페달에 발을 올려, 마치 bike (yeah, yeah)<br>
-        </p>
-        <p>
-            I just gotta get it<br>
-            Watch me go, go, go, go, go, go<br>
-            I just gotta get it<br>
-            Watch me go, go, go, go, go, go<br>
-            I just gotta get it<br>
-        </p>
-        <p>
-            어렸을 때부터, 난 동네서 좀 특이했어 (pow, pow, pow, pow, pow)<br>
-            Yeah, 맘은 이미 pop-star back at 중이 때 (yeah, yeah, yeah, yeah)<br>
-            우린 모자 눌러쓰고, new era 추진해 (ay, ay)<br>
-            우릴 보고 엄지 들어, 모든 구시대, yeah<br>
-            Watch me, I'm gon' spit it, pop and pop, 난 지금 hit mode<br>
-            Hitman처럼, hit 만들고 싶어서 난 reload (reload)<br>
-            치키치키, reload, uh-uh, reload (ay)<br>
-            신호 주면, 바로 던져넣어, 마치 free throw<br>
-        </p>
-        <p>
-            우린 필요 없어 다른 sign<br>
-            Paint the town, 초록색의 lights<br>
-            페달에 발을 올려, 마치 bike<br>
-        </p>
-        <p>
-            I just gotta get it<br>
-            Watch me go, go, go, go, go, go<br>
-            I just gotta get it<br>
-            Watch me go, go, go, go, go, go<br>
-            I just gotta get it<br>
-        </p>
-        <p>
-            가져와 new beat,<br>
-            가져와 new hit<br>
-            가져와 new sheet,<br>
-            만들어 new shit<br>
-            가져와 new beat,<br>
-            가져와 new hit<br>
-            가져와 new sheet,<br>
-            I'm on the new shit<br>
-        </p>
-    </div>
+                <div id="lyrics">
+                    <h2>
+                        GO!
+                    </h2>
+                    <p>
+                        우린 필요 없어 다른 sign<br>
+                        Paint the town, 초록색의 lights<br>
+                        페달에 발을 올려, 마치 bike<br>
+                    </p>
+                    <p>
+                        I just gotta get it<br>
+                        Watch me go, go, go, go, go, go<br>
+                        I just gotta get it<br>
+                        Watch me go, go, go, go, go, go<br>
+                        I just gotta get it<br>
+                    </p>
+                    <p>
+                        가져와 new beat,<br>
+                        가져와 new hit<br>
+                        가져와 new sheet,<br>
+                        만들어 new shit<br>
+                        가져와 new beat,<br>
+                        가져와 new hit<br>
+                        가져와 new sheet,<br>
+                        I'm on the new shit<br>
+                    </p>
+                    <p>
+                        (Ya, sh) 바지 내려 입고 우린 studio로 가지 (huh, huh)<br>
+                        Drippy, 고장 난 듯 배수관이, yeah, yeah<br>
+                        불러와 new wave, Poseidon 같이 (uh, uh)<br>
+                        Martin (that's on fire), play that beat (that's on fire)<br>
+                        Yeah, 작업실에서 불을 피워, 밤도 대낮같이 (yeah)<br>
+                        우린 오늘 만들었지, and this track is so sick<br>
+                        레벨 좀 더 키워, 이 노래는 달려 도시를 (도시, yeah)<br>
+                    </p>
+                    <p>
+                        우린 필요 없어 다른 sign (okay, okay)<br>
+                        Paint the town, 초록색의 lights (yeah, lights)<br>
+                        페달에 발을 올려, 마치 bike (yeah, yeah)<br>
+                    </p>
+                    <p>
+                        I just gotta get it<br>
+                        Watch me go, go, go, go, go, go<br>
+                        I just gotta get it<br>
+                        Watch me go, go, go, go, go, go<br>
+                        I just gotta get it<br>
+                    </p>
+                    <p>
+                        어렸을 때부터, 난 동네서 좀 특이했어 (pow, pow, pow, pow, pow)<br>
+                        Yeah, 맘은 이미 pop-star back at 중이 때 (yeah, yeah, yeah, yeah)<br>
+                        우린 모자 눌러쓰고, new era 추진해 (ay, ay)<br>
+                        우릴 보고 엄지 들어, 모든 구시대, yeah<br>
+                        Watch me, I'm gon' spit it, pop and pop, 난 지금 hit mode<br>
+                        Hitman처럼, hit 만들고 싶어서 난 reload (reload)<br>
+                        치키치키, reload, uh-uh, reload (ay)<br>
+                        신호 주면, 바로 던져넣어, 마치 free throw<br>
+                    </p>
+                    <p>
+                        우린 필요 없어 다른 sign<br>
+                        Paint the town, 초록색의 lights<br>
+                        페달에 발을 올려, 마치 bike<br>
+                    </p>
+                    <p>
+                        I just gotta get it<br>
+                        Watch me go, go, go, go, go, go<br>
+                        I just gotta get it<br>
+                        Watch me go, go, go, go, go, go<br>
+                        I just gotta get it<br>
+                    </p>
+                    <p>
+                        가져와 new beat,<br>
+                        가져와 new hit<br>
+                        가져와 new sheet,<br>
+                        만들어 new shit<br>
+                        가져와 new beat,<br>
+                        가져와 new hit<br>
+                        가져와 new sheet,<br>
+                        I'm on the new shit<br>
+                    </p>
+                </div>
+            </td>
+            <td>
+                <div>
+                    <p>Music player</p>
+                    <audio id="audio" src="music/go.mp3"></audio>
+                    <button id="playButton">Play</button>
+                </div>
+            </td>
+        </tr>
+    </table>
 
     <div id="korean" style="display: none;">
         <h2>
