Added the music player to all of the songs :)

--- a/go.html
+++ b/go.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <table>
+    <table style="width: 100vw;">
         <tr>
-            <td>
+            <td style="width: 50%;">
                 <div>
                     <button onclick="translateToKorean()">korean</button>
                     <button onclick="translateToRomanized()">romanized</button>
@@ -98,7 +98,7 @@
                     </p>
                 </div>
             </td>
-            <td>
+            <td style="width: 50%; vertical-align: top; justify-content: center;">
                 <div>
                     <p>Music player</p>
                     <audio id="audio" src="music/go.mp3"></audio>
