--- a/whatyouwant.html
+++ b/whatyouwant.html
@@ -8,87 +8,100 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <button onclick="translateToKorean()">korean</button>
-        <button onclick="translateToRomanized()">romanized</button>
-        <button onclick="translateToEnglish()">english</button>
-    </div>
+    <table style="width: 100vw;">
+        <tr>
+            <td style="width: 50%;">
+                <div>
+                    <button onclick="translateToKorean()">korean</button>
+                    <button onclick="translateToRomanized()">romanized</button>
+                    <button onclick="translateToEnglish()">english</button>
+                </div>
 
-    <div id="lyrics">
-        <h2>
-            What You Want
-        </h2>
-        <p>
-            Crash, smash, rock, mash up<br>
-            Ooh, take what you want<br>
-            돈, 멋, 명예, love and what?<br>
-            Ooh, take what you want<br>
-        </p>
-        <p>
-            Life's too fast, 뭘 더 참아 이젠 됐어? (What you want?)<br>
-            I want to see the whole world, 도장 찍어 나의 passport (what you want?)<br>
-            Well, 이마에 피도 안 말랐을 때 계획한 행보 (what you want?)<br>
-            바라던 걸 찾아 집을 떠나, what we came for<br>
-        </p>
-        <p>
-            Crash, smash, rock, mash up<br>
-            Ooh, take what you want<br>
-            돈, 멋, 명예, love and what?<br>
-            Ooh, take what you want<br>
-        </p>
-        <p>
-            적당히론 배가 차지 않아 (않아)<br>
-            들이켜, yuh, 마치 하마 (하마)<br>
-            Smelling like a teen, 마치 Nirvana (Nirvana)<br>
-            소리쳐, yuh, 'cause we wanna<br>
-        </p>
-        <p>
-            That's what we're all looking for<br>
-            That's what we're all looking for<br>
-            That's what we're all looking for<br>
-            That's what we're all looking (one, two, three) for<br>
-        </p>
-        <p>
-            난 걍 돌아갈 바엔 바로 넘어버려 담장 (what you want?)<br>
-            난 원해 다시 뛰게 할 무언갈 나의 심장 (what you want?)<br>
-            야밤 새벽 배송 같은 fresh song, I need that (what you want?)<br>
-            I want the whole world to (wake up) and realize<br>
-        </p>
-        <p>
-            Some people want (this), some people want (that)<br>
-            나도 똑같아 17년 평(생)<br>
-            쫓았었던 love, 쫓았었던 fame<br>
-            So, now, I want the whole world to know my name<br>
-        </p>
-        <p>
-            Crash, smash, rock, mash up<br>
-            Ooh, take what you want<br>
-            돈, 멋, 명예, love and what?<br>
-            Ooh, take what you want<br>
-        </p>
-        <p>
-            적당히론 배가 차지 않아 (않아)<br>
-            들이켜, yuh, 마치 하마 (하마)<br>
-            Smelling like a teen, 마치 Nirvana (Nirvana)<br>
-            소리쳐, yuh, 'cause we wanna<br>
-        </p>
-        <p>
-            That's what we're all looking for<br>
-            That's what we're all looking for<br>
-        </p>
-        <p>
-            da-ra, da-ra-ra<br>
-            (That's, that's, that's, that's what we're all-)<br>
-            That's what we're all looking (one, two, three) for<br>
-            What you want?<br>
-        </p>
-        <p>
-            What you want?<br>
-            What you want?<br>
-            What you want?<br>
-            What you want?<br>
-        </p>
-    </div>
+                <div id="lyrics">
+                    <h2>
+                        What You Want
+                    </h2>
+                    <p>
+                        Crash, smash, rock, mash up<br>
+                        Ooh, take what you want<br>
+                        돈, 멋, 명예, love and what?<br>
+                        Ooh, take what you want<br>
+                    </p>
+                    <p>
+                        Life's too fast, 뭘 더 참아 이젠 됐어? (What you want?)<br>
+                        I want to see the whole world, 도장 찍어 나의 passport (what you want?)<br>
+                        Well, 이마에 피도 안 말랐을 때 계획한 행보 (what you want?)<br>
+                        바라던 걸 찾아 집을 떠나, what we came for<br>
+                    </p>
+                    <p>
+                        Crash, smash, rock, mash up<br>
+                        Ooh, take what you want<br>
+                        돈, 멋, 명예, love and what?<br>
+                        Ooh, take what you want<br>
+                    </p>
+                    <p>
+                        적당히론 배가 차지 않아 (않아)<br>
+                        들이켜, yuh, 마치 하마 (하마)<br>
+                        Smelling like a teen, 마치 Nirvana (Nirvana)<br>
+                        소리쳐, yuh, 'cause we wanna<br>
+                    </p>
+                    <p>
+                        That's what we're all looking for<br>
+                        That's what we're all looking for<br>
+                        That's what we're all looking for<br>
+                        That's what we're all looking (one, two, three) for<br>
+                    </p>
+                    <p>
+                        난 걍 돌아갈 바엔 바로 넘어버려 담장 (what you want?)<br>
+                        난 원해 다시 뛰게 할 무언갈 나의 심장 (what you want?)<br>
+                        야밤 새벽 배송 같은 fresh song, I need that (what you want?)<br>
+                        I want the whole world to (wake up) and realize<br>
+                    </p>
+                    <p>
+                        Some people want (this), some people want (that)<br>
+                        나도 똑같아 17년 평(생)<br>
+                        쫓았었던 love, 쫓았었던 fame<br>
+                        So, now, I want the whole world to know my name<br>
+                    </p>
+                    <p>
+                        Crash, smash, rock, mash up<br>
+                        Ooh, take what you want<br>
+                        돈, 멋, 명예, love and what?<br>
+                        Ooh, take what you want<br>
+                    </p>
+                    <p>
+                        적당히론 배가 차지 않아 (않아)<br>
+                        들이켜, yuh, 마치 하마 (하마)<br>
+                        Smelling like a teen, 마치 Nirvana (Nirvana)<br>
+                        소리쳐, yuh, 'cause we wanna<br>
+                    </p>
+                    <p>
+                        That's what we're all looking for<br>
+                        That's what we're all looking for<br>
+                    </p>
+                    <p>
+                        da-ra, da-ra-ra<br>
+                        (That's, that's, that's, that's what we're all-)<br>
+                        That's what we're all looking (one, two, three) for<br>
+                        What you want?<br>
+                    </p>
+                    <p>
+                        What you want?<br>
+                        What you want?<br>
+                        What you want?<br>
+                        What you want?<br>
+                    </p>
+                </div>
+            </td>
+            <td style="width: 50%; vertical-align: top; justify-content: center;">
+                <div>
+                    <p>Music player</p>
+                    <audio id="audio" src="music/whatyouwant.mp3"></audio>
+                    <button id="playButton">Play</button>
+                </div>
+            </td>
+        </tr>
+    </table>
 
     <div id="korean">
         <h2>
