--- a/joyride.html
+++ b/joyride.html
@@ -8,71 +8,84 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <button onclick="translateToKorean()">korean</button>
-        <button onclick="translateToRomanized()">romanized</button>
-        <button onclick="translateToEnglish()">english</button>
-    </div>
+    <table style="width: 100vw;">
+        <tr>
+            <td style="width: 50%;">
+                <div>
+                    <button onclick="translateToKorean()">korean</button>
+                    <button onclick="translateToRomanized()">romanized</button>
+                    <button onclick="translateToEnglish()">english</button>
+                </div>
 
-    <div id="lyrics">
-        <h2>
-            Joyride
-        </h2>
-        <p>
-            갇혀 이 건물 속에, 밤새<br>
-            No sun, no sky 얼굴은 창백 all day<br>
-            미쳐 난 flipping 마치 fried eggs, pancakes<br>
-            Bloodshot eyes tonight 도망가, 여길 벗어나<br>
-        </p>
-        <p>
-            'Cause, ooh<br>
-            우리는 꿈꿔왔지, 찰나의 해방<br>
-            달려, 부릉<br>
-            트렁크에다 콜라 채워, 얼른 밟아 그 pedal (yah)<br>
-        </p>
-        <p>
-            이 자릴 떠, 지도는 집어치워 'cause we're on a joyride<br>
-            더 세게 speed it up 지금 기분 so high<br>
-            Driving so fast 가로질러 긴 밤<br>
-            Day to night, ride, we're on a joyride<br>
-        </p>
-        <p>
-            Yeah, yeah, yeah, we're on a joyride<br>
-            Yeah, yeah, yeah, we're on a joyride<br>
-            Driving so fast 가로질러 긴 밤<br>
-            Day to night, ride, we're on a joyride<br>
-        </p>
-        <p>
-            범생이는 나의 past tence<br>
-            학교는 찍먹, 아지트로 came back<br>
-            인생이 폭풍이면 난<br>
-            내 drip 아래 춰 rain dance<br>
-        </p>
-        <p>
-            종일 뛰었었지<br>
-            폭주는 내 personality<br>
-            (마치) MJ, ever since twenty-three<br>
-            Rat snakes 담을 넘었지<br>
-        </p>
-        <p>
-            'Cause, ooh<br>
-            우리는 꿈꿔왔지, 찰나의 해방<br>
-            달려, 부릉<br>
-            트렁크에다 콜라 채워, 얼른 밟아 그 pedal (yah)<br>
-        </p>
-        <p>
-            이 자릴 떠, 지도는 집어치워 'cause we're on a joyride<br>
-            더 세게 speed it up 지금 기분 so high<br>
-            Driving so fast 가로질러 긴 밤<br>
-            Day to night, ride, we're on a joyride<br>
-        </p>
-        <p>
-            Yeah, yeah, yeah, we're on a joyride<br>
-            Yeah, yeah, yeah, we're on a joyride<br>
-            Driving so fast 가로질러 긴 밤<br>
-            Day to night, ride, we're on a joyride<br>
-        </p>
-    </div>
+                <div id="lyrics">
+                    <h2>
+                        Joyride
+                    </h2>
+                    <p>
+                        갇혀 이 건물 속에, 밤새<br>
+                        No sun, no sky 얼굴은 창백 all day<br>
+                        미쳐 난 flipping 마치 fried eggs, pancakes<br>
+                        Bloodshot eyes tonight 도망가, 여길 벗어나<br>
+                    </p>
+                    <p>
+                        'Cause, ooh<br>
+                        우리는 꿈꿔왔지, 찰나의 해방<br>
+                        달려, 부릉<br>
+                        트렁크에다 콜라 채워, 얼른 밟아 그 pedal (yah)<br>
+                    </p>
+                    <p>
+                        이 자릴 떠, 지도는 집어치워 'cause we're on a joyride<br>
+                        더 세게 speed it up 지금 기분 so high<br>
+                        Driving so fast 가로질러 긴 밤<br>
+                        Day to night, ride, we're on a joyride<br>
+                    </p>
+                    <p>
+                        Yeah, yeah, yeah, we're on a joyride<br>
+                        Yeah, yeah, yeah, we're on a joyride<br>
+                        Driving so fast 가로질러 긴 밤<br>
+                        Day to night, ride, we're on a joyride<br>
+                    </p>
+                    <p>
+                        범생이는 나의 past tence<br>
+                        학교는 찍먹, 아지트로 came back<br>
+                        인생이 폭풍이면 난<br>
+                        내 drip 아래 춰 rain dance<br>
+                    </p>
+                    <p>
+                        종일 뛰었었지<br>
+                        폭주는 내 personality<br>
+                        (마치) MJ, ever since twenty-three<br>
+                        Rat snakes 담을 넘었지<br>
+                    </p>
+                    <p>
+                        'Cause, ooh<br>
+                        우리는 꿈꿔왔지, 찰나의 해방<br>
+                        달려, 부릉<br>
+                        트렁크에다 콜라 채워, 얼른 밟아 그 pedal (yah)<br>
+                    </p>
+                    <p>
+                        이 자릴 떠, 지도는 집어치워 'cause we're on a joyride<br>
+                        더 세게 speed it up 지금 기분 so high<br>
+                        Driving so fast 가로질러 긴 밤<br>
+                        Day to night, ride, we're on a joyride<br>
+                    </p>
+                    <p>
+                        Yeah, yeah, yeah, we're on a joyride<br>
+                        Yeah, yeah, yeah, we're on a joyride<br>
+                        Driving so fast 가로질러 긴 밤<br>
+                        Day to night, ride, we're on a joyride<br>
+                    </p>
+                </div>
+            </td>
+            <td style="width: 50%; vertical-align: top; justify-content: center;">
+                <div>
+                    <p>Music player</p>
+                    <audio id="audio" src="music/joyride.mp3"></audio>
+                    <button id="playButton">Play</button>
+                </div>
+            </td>
+        </tr>
+    </table>
 
     <div id="korean">
         <h2>
