I made a prototype for a painting canvas :3

--- a/discography.html
+++ b/discography.html
@@ -14,7 +14,7 @@
                     <img src="images/album-cover.png" alt="Album: Color Outside the box" style="width: 25vw;">
                 </td>
                 <td style="width: 60vw;">
-                    <p><b>EP: </b>Color Outside the Box</p>
+                    <p><b>EP: </b>Color Outside the Lines</p>
                     <p><b>Release date: </b>August 18, 2025</p>
                     <p><b>Genre: </b>K-pop, with influences from hip-hop, psychedelic rock, and Y2K aesthetics</p>
                     <p><b>Songs: </b></p>
