--- a/joyride.html
+++ b/joyride.html
@@ -79,9 +79,15 @@
             </td>
             <td style="width: 50%; vertical-align: top; justify-content: center;">
                 <div>
-                    <p>Music player</p>
-                    <audio id="audio" src="music/joyride.mp3"></audio>
-                    <button id="playButton">Play</button>
+                        <p>Music player</p>
+                    </div>
+                    <div>
+                        <img src="images/album-cover.png" style="width: 15vw;"/>
+                    </div>
+                    <div>
+                        <audio id="audio" src="music/joyride.mp3"></audio>
+                        <button id="playButton">Play</button>
+                    </div>
                 </div>
             </td>
         </tr>
