--- a/canvas.html
+++ b/canvas.html
@@ -23,7 +23,7 @@
         <button id="clear">Clear</button>
         <br>
 
-        <canvas id="paint-canvas" width="400px" height="400px"></canvas>
+        <canvas id="paint-canvas" width="400" height="400"></canvas>
     </div>
 </body>
 </html>
