--- a/canvas.html
+++ b/canvas.html
@@ -8,7 +8,7 @@
     <title>Color Outside The Lines</title>
 </head>
 <body>
-    <div class="main-container">
+    <div class="controls">
         <div class="color">
             <button value="#FBFF00"></button>
             <button value="#009fff"></button>
@@ -22,8 +22,9 @@
         <button id="save">Save</button>
         <button id="clear">Clear</button>
         <br>
-
-        <canvas id="paint-canvas" width="400" height="400"></canvas>
     </div>
+
+    <canvas id="paint-canvas"></canvas>
+    <div id="no-draw" class="no-draw"></div>
 </body>
 </html>
