--- a/joyride.html
+++ b/joyride.html
@@ -93,7 +93,7 @@
         </tr>
     </table>
 
-    <div id="korean">
+    <div id="korean" style="display: none;">
         <h2>
             Joyride
         </h2>
@@ -153,7 +153,7 @@
         </p>
     </div>
 
-    <div id="romanized">
+    <div id="romanized" style="display: none;">
         <h2>
             Joyride
         </h2>
@@ -213,7 +213,7 @@
         </p>
     </div>
 
-    <div id="english">
+    <div id="english" style="display: none;">
         <h2>
             Joyride
         </h2>
