--- a/lulluby.html
+++ b/lulluby.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <link rel="stylesheet" href="song.css">
+    <script src="https://cdn.jsdelivr.net/npm/tone@latest/build/Tone.js"></script>
     <script src="song.js"></script>
     <title>Document</title>
 </head>
 <body>
     <table style="width: 100vw;">
         <tr>
-            <td style="width: 50%;">
+            <td style="width: 50%; padding-left: 5vw; padding-top: 5vh;">
                 <div>
                     <button onclick="translateToKorean()">korean</button>
                     <button onclick="translateToRomanized()">romanized</button>
@@ -68,7 +69,7 @@
                     </p>
                 </div>
             </td>
-            <td style="width: 50%; vertical-align: top; justify-content: center;">
+            <td style="width: 50%; padding-top: 5vh; vertical-align: top; text-align: center;">
                 <div>
                     <div>
                         <p>Music player</p>
@@ -80,6 +81,15 @@
                         <audio id="audio" src="music/lulluby.mp3"></audio>
                         <button id="playButton">Play</button>
                     </div>
+                </div>
+                <div class="piano" id="piano">
+                    <div class="key" id="A">A</div>
+                    <div class="key" id="S">S</div>
+                    <div class="key" id="D">D</div>
+                    <div class="key" id="F">F</div>
+                    <div class="key" id="G">G</div>
+                    <div class="key" id="H">H</div>
+                    <div class="key" id="J">J</div>
                 </div>
             </td>
         </tr>
