Wrote a short Readme

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="merch.html" class="table-text"><p id="merch-text">Merch</p></a>
                     </td>
                     <td class="table-column">
-                        <a href="minigames.html" class="table-text"><p id="minigames-text">Minigames</p></a>
+                        <a href="canvas.html" class="table-text"><p id="minigames-text">Activities</p></a>
                     </td>
                 </tr>
                 <tr>
@@ -46,8 +46,8 @@
                         </a>
                     </td>
                     <td class="table-images">
-                        <a href="minigames.html">
-                            <img id="minigame-image" src="images/console.png" alt="Minigames image" style="width: 13vw;">
+                        <a href="canvas.html">
+                            <img id="minigame-image" src="images/console.png" alt="Activities image" style="width: 13vw;">
                         </a>
                     </td>
                 </tr>
