--- a/fashion.html
+++ b/fashion.html
@@ -115,15 +115,30 @@
                         <button id="playButton">Play</button>
                     </div>
                 </div>
-                <div class="piano" id="piano">
-                    <div class="key" id="A">A</div>
-                    <div class="key" id="S">S</div>
-                    <div class="key" id="D">D</div>
-                    <div class="key" id="F">F</div>
-                    <div class="key" id="G">G</div>
-                    <div class="key" id="H">H</div>
-                    <div class="key" id="J">J</div>
-                </div>
+                <table style="width: 100%; height: 100%;">
+                    <tr>
+                        <td style="width: 25%;">
+                            <div style="background-color: white;">
+                                <h3>Chorus sheet music</h3>
+                                <p>
+                                    A S A S A S A S<br>
+                                    A S A S A S A S
+                                </p>
+                            </div>
+                        </td>
+                        <td style="width: 75%;">
+                            <div class="piano" id="piano">
+                                <div class="key" id="A">A</div>
+                                <div class="key" id="S">S</div>
+                                <div class="key" id="D">D</div>
+                                <div class="key" id="F">F</div>
+                                <div class="key" id="G">G</div>
+                                <div class="key" id="H">H</div>
+                                <div class="key" id="J">J</div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
     </table>
