Added a logo drawing and made arrangement changes :)

--- a/discography.html
+++ b/discography.html
@@ -14,15 +14,15 @@
                     <img src="images/album-cover.png" alt="Album: Color Outside the box" style="width: 25vw;">
                 </td>
                 <td style="width: 60vw;">
-                    <p><b>EP: </b>Color Outside the Lines</p>
-                    <p><b>Release date: </b>August 18, 2025</p>
-                    <p><b>Genre: </b>K-pop, with influences from hip-hop, psychedelic rock, and Y2K aesthetics</p>
-                    <p><b>Songs: </b></p>
-                    <p><a href="go.html" class="song-text">GO!</a></p>
-                    <p><a href="whatyouwant.html" class="song-text">What You Want</a></p>
-                    <p><a href="fashion.html" class="song-text">Fashion</a></p>
-                    <p><a href="joyride.html" class="song-text">Joyride</a></p>
-                    <p><a href="lulluby.html" class="song-text">Lulluby</a></p>
+                    <p class="text"><b>EP: </b>Color Outside the Lines</p>
+                    <p class="text"><b>Release date: </b>August 18, 2025</p>
+                    <p class="text"><b>Genre: </b>K-pop, with influences from hip-hop, psychedelic rock, and Y2K aesthetics</p>
+                    <p class="text"><b>Songs: </b></p>
+                    <p class="text"><a href="go.html" class="song-text">GO!</a></p>
+                    <p class="text"><a href="whatyouwant.html" class="song-text">What You Want</a></p>
+                    <p class="text"><a href="fashion.html" class="song-text">Fashion</a></p>
+                    <p class="text"><a href="joyride.html" class="song-text">Joyride</a></p>
+                    <p class="text"><a href="lulluby.html" class="song-text">Lulluby</a></p>
                 </td>
             </tr>
         </table>
