--- a/james.html
+++ b/james.html
@@ -23,17 +23,17 @@
                     <button>></button>
                 </td>
                 <td class="table-description">
-                    <p><b>Stage Name: </b>James (제임스)</p>
-                    <p><b>Birth Name: </b>Zhao Yufan (趙雨凡)</p>
-                    <p><b>Position: </b>N/A</p>
-                    <p><b>Birthday: </b>October 14, 2005</p>
-                    <p><b>Zodiac Sign: </b>Libra</p>
-                    <p><b>Chinese Zodiac Sign: </b>Rooster</p>
-                    <p><b>Blood Type: </b>A</p>
-                    <p><b>MBTI Type: </b>INTP</p>
-                    <p><b>Nationality: </b>Thai-Chinese</p>
-                    <p><b>Representative Color: </b>Green</p>
-                    <p><b>Representative Emoji: </b>🦅 (Eagle)</p>
+                    <p class="text"><b>Stage Name: </b>James (제임스)</p>
+                    <p class="text"><b>Birth Name: </b>Zhao Yufan (趙雨凡)</p>
+                    <p class="text"><b>Position: </b>N/A</p>
+                    <p class="text"><b>Birthday: </b>October 14, 2005</p>
+                    <p class="text"><b>Zodiac Sign: </b>Libra</p>
+                    <p class="text"><b>Chinese Zodiac Sign: </b>Rooster</p>
+                    <p class="text"><b>Blood Type: </b>A</p>
+                    <p class="text"><b>MBTI Type: </b>INTP</p>
+                    <p class="text"><b>Nationality: </b>Thai-Chinese</p>
+                    <p class="text"><b>Representative Color: </b>Green</p>
+                    <p class="text"><b>Representative Emoji: </b>🦅 (Eagle)</p>
                 </td>
             </tr>
         </table>
