--- a/juhoon.html
+++ b/juhoon.html
@@ -23,17 +23,17 @@
                     <button>></button>
                 </td>
                 <td class="table-description">
-                    <p><b>Stage Name: </b>Juhoon (주훈)</p>
-                    <p><b>Birth Name: </b>Kim Ju-hoon (김주훈)</p>
-                    <p><b>Position: </b>N/A</p>
-                    <p><b>Birthday: </b>January 3, 2008</p>
-                    <p><b>Zodiac Sign: </b>Capricorn</p>
-                    <p><b>Height: </b>190.5 cm (6’3″)</p>
-                    <p><b>Blood Type: </b>O</p>
-                    <p><b>MBTI Type: </b>ISFP</p>
-                    <p><b>Nationality: </b>Korean</p>
-                    <p><b>Representative Color: </b>Blue</p>
-                    <p><b>Representative Emoji: </b>🐢 (Turtle)</p>
+                    <p class="text"><b>Stage Name: </b>Juhoon (주훈)</p>
+                    <p class="text"><b>Birth Name: </b>Kim Ju-hoon (김주훈)</p>
+                    <p class="text"><b>Position: </b>N/A</p>
+                    <p class="text"><b>Birthday: </b>January 3, 2008</p>
+                    <p class="text"><b>Zodiac Sign: </b>Capricorn</p>
+                    <p class="text" ><b>Height: </b>190.5 cm (6’3″)</p>
+                    <p class="text"><b>Blood Type: </b>O</p>
+                    <p class="text"><b>MBTI Type: </b>ISFP</p>
+                    <p class="text"><b>Nationality: </b>Korean</p>
+                    <p class="text"><b>Representative Color: </b>Blue</p>
+                    <p class="text"><b>Representative Emoji: </b>🐢 (Turtle)</p>
                 </td>
             </tr>
         </table>
