--- a/keonho.html
+++ b/keonho.html
@@ -23,17 +23,17 @@
                     <button>></button>
                 </td>
                 <td class="table-description">
-                    <p><b>Stage Name: </b>Keonho (건호)</p>
-                    <p><b>Birth Name: </b>Ahn Geon-ho (안건호)</p>
-                    <p><b>Position: </b>Maknae, N/A</p>
-                    <p><b>Birthday: </b>February 14, 2009</p>
-                    <p><b>Zodiac Sign: </b>Aquarius</p>
-                    <p><b>Chinese Zodiac Sign: </b>Ox</p>
-                    <p><b>Blood Type: </b>O</p>
-                    <p><b>MBTI Type: </b>INFP/ENFP</p>
-                    <p><b>Nationality: </b>Korean</p>
-                    <p><b>Representative Color: </b>Yellow</p>
-                    <p><b>Representative Emoji: </b>🐶 (Puppy)</p>
+                    <p class="text"><b>Stage Name: </b>Keonho (건호)</p>
+                    <p class="text"><b>Birth Name: </b>Ahn Geon-ho (안건호)</p>
+                    <p class="text"><b>Position: </b>Maknae, N/A</p>
+                    <p class="text"><b>Birthday: </b>February 14, 2009</p>
+                    <p class="text"><b>Zodiac Sign: </b>Aquarius</p>
+                    <p class="text"><b>Chinese Zodiac Sign: </b>Ox</p>
+                    <p class="text"><b>Blood Type: </b>O</p>
+                    <p class="text"><b>MBTI Type: </b>INFP/ENFP</p>
+                    <p class="text"><b>Nationality: </b>Korean</p>
+                    <p class="text"><b>Representative Color: </b>Yellow</p>
+                    <p class="text"><b>Representative Emoji: </b>🐶 (Puppy)</p>
                 </td>
             </tr>
         </table>
