--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div style="width: 100vw; height: 100vh;">
         <div class="topbar">
-            <h1 class="topbar-text">CORTIS</h1>
+            <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+            <img src="images/cortis_name.png" style="width: 55vw;">
         </div>
-
         <div>
             <table class="table">
                 <tr>
