--- a/lulluby.html
+++ b/lulluby.html
@@ -12,7 +12,7 @@
     <table style="width: 100vw;">
         <tr>
             <td style="width: 50%; padding-left: 5vw; padding-top: 5vh;">
-                <div>
+                <div class="translate-buttons">
                     <button onclick="translateToKorean()">korean</button>
                     <button onclick="translateToRomanized()">romanized</button>
                     <button onclick="translateToEnglish()">english</button>
