--- a/seonhyeon.html
+++ b/seonhyeon.html
@@ -23,17 +23,17 @@
                     <button>></button>
                 </td>
                 <td class="table-description">
-                    <p><b>Stage Name: </b>Seonghyeon (성현)</p>
-                    <p><b>Birth Name: </b>Eom Sung-hyun (엄성현)</p>
-                    <p><b>Position: </b>N/A</p>
-                    <p><b>Birthday: </b>January 13, 2009</p>
-                    <p><b>Zodiac Sign: </b>Capricorn</p>
-                    <p><b>Chinese Zodiac Sign: </b>Rat</p>
-                    <p><b>Blood Type: </b>A</p>
-                    <p><b>MBTI Type: </b>INTP</p>
-                    <p><b>Nationality: </b>Korean</p>
-                    <p><b>Representative Color: </b>Black</p>
-                    <p><b>Representative Emoji: </b>🦊 (Fox)</p>
+                    <p class="text"><b>Stage Name: </b>Seonghyeon (성현)</p>
+                    <p class="text"><b>Birth Name: </b>Eom Sung-hyun (엄성현)</p>
+                    <p class="text"><b>Position: </b>N/A</p>
+                    <p class="text"><b>Birthday: </b>January 13, 2009</p>
+                    <p class="text"><b>Zodiac Sign: </b>Capricorn</p>
+                    <p class="text"><b>Chinese Zodiac Sign: </b>Rat</p>
+                    <p class="text"><b>Blood Type: </b>A</p>
+                    <p class="text"><b>MBTI Type: </b>INTP</p>
+                    <p class="text"><b>Nationality: </b>Korean</p>
+                    <p class="text"><b>Representative Color: </b>Black</p>
+                    <p class="text"><b>Representative Emoji: </b>🦊 (Fox)</p>
                 </td>
             </tr>
         </table>
