Basic memory match logic

--- a/martin.html
+++ b/martin.html
@@ -23,16 +23,16 @@
                     <button>></button>
                 </td>
                 <td class="table-description">
-                    <p><b>Stage Name: </b>Martin (마틴)</p>
-                    <p><b>Birth Name: </b>Martin Edwards (에드워드 마틴)</p>
-                    <p><b>Position: </b>Leader</p>
-                    <p><b>Birthday: </b>March 20, 2008</p>
-                    <p><b>Zodiac Sign: </b>Pisces</p>
-                    <p><b>Blood Type: </b>O</p>
-                    <p><b>MBTI Type: </b>INFP/ENFP</p>
-                    <p><b>Nationality: </b>Canadian-Korean</p>
-                    <p><b>Representative Color: </b>Red</p>
-                    <p><b>Representative Emoji: </b>🐕 (Dog – Italian Greyhound)</p>
+                    <p class="text"><b>Stage Name: </b>Martin (마틴)</p>
+                    <p class="text"><b>Birth Name: </b>Martin Edwards (에드워드 마틴)</p>
+                    <p class="text"><b>Position: </b>Leader</p>
+                    <p class="text"><b>Birthday: </b>March 20, 2008</p>
+                    <p class="text"><b>Zodiac Sign: </b>Pisces</p>
+                    <p class="text"><b>Blood Type: </b>O</p>
+                    <p class="text"><b>MBTI Type: </b>INFP/ENFP</p>
+                    <p class="text"><b>Nationality: </b>Canadian-Korean</p>
+                    <p class="text"><b>Representative Color: </b>Red</p>
+                    <p class="text"><b>Representative Emoji: </b>🐕 (Dog – Italian Greyhound)</p>
                 </td>
             </tr>
         </table>
