Added a page for activity/game sellection ^^

--- a/activities.html
+++ b/activities.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="activities.css">
+    <script src="index.js"></script>
     <title>Activities</title>
 </head>
 <body>
-    
+    <div style="width: 100vw; height: 100vh;">
+        <div class="topbar">
+            <img src="images/cortis_logo.png" style="width: 7vw; margin-left: 1vw; margin-right: 1vw;">
+            <img src="images/cortis_name.png" style="width: 55vw;">
+        </div>
+        <div>
+            <table class="table">
+                <tr>
+                    <td class="table-column">
+                        <a href="canvas.html" class="table-text"><p id="discography-text">Color outside the lines</p></a>
+                    </td>
+                    <td class="table-column">
+                        <a href="memory_match_game.html" class="table-text"><p id="members-text">Memory match</p></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="table-images"> 
+                        <a href="canvas.html">
+                            <img id="discography-image" src="images/music.png" alt="Discography image" style="width: 17vw;">
+                        </a>
+                    </td>
+                    <td class="table-images">
+                        <a href="members.html">
+                            <img id="members-image" src="images/members.png" alt="Members image" style="width: 16vw;">
+                        </a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
