--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="merch.html" class="table-text"><p id="merch-text">Merch</p></a>
                     </td>
                     <td class="table-column">
-                        <a href="canvas.html" class="table-text"><p id="minigames-text">Activities</p></a>
+                        <a href="activities.html" class="table-text"><p id="minigames-text">Activities</p></a>
                     </td>
                 </tr>
                 <tr>
@@ -46,7 +46,7 @@
                         </a>
                     </td>
                     <td class="table-images">
-                        <a href="canvas.html">
+                        <a href="activities.html">
                             <img id="minigame-image" src="images/console.png" alt="Activities image" style="width: 13vw;">
                         </a>
                     </td>
